#231 combine topmenu cache into the wrapper block

--- a/Magento_Theme/layout/default.xml
+++ b/Magento_Theme/layout/default.xml
@@ -49,24 +49,20 @@
                 <block name="topmenu_generic"
                        as="topmenu"
                        template="Magento_Theme::html/header/topmenu.phtml"
+                       ttl="3600"
                 >
+                    <arguments>
+                        <argument name="cache_lifetime" xsi:type="string">3600</argument>
+                    </arguments>
                     <block name="topmenu_mobile"
                            as="topmenu.mobile"
-                           template="Magento_Theme::html/header/menu/mobile.phtml" ttl="3600"
-                    >
-                        <arguments>
-                            <argument name="cache_lifetime" xsi:type="string">3600</argument>
-                        </arguments>
-                    </block>
+                           template="Magento_Theme::html/header/menu/mobile.phtml"
+                    ></block>
 
                     <block name="topmenu_desktop"
                            as="topmenu.desktop"
-                           template="Magento_Theme::html/header/menu/desktop.phtml" ttl="3600"
-                    >
-                        <arguments>
-                            <argument name="cache_lifetime" xsi:type="string">3600</argument>
-                        </arguments>
-                    </block>
+                           template="Magento_Theme::html/header/menu/desktop.phtml"
+                    ></block>
                 </block>
             </block>
         </referenceContainer>
