--- a/Magento_Checkout/templates/cart.phtml
+++ b/Magento_Checkout/templates/cart.phtml
@@ -25,6 +25,7 @@ use Magento\Framework\Escaper;
         <div class="grid lg:grid-cols-2 gap-8" x-show="!isLoading && !cartEmpty">
             <div>
                 <?= $block->getChildHtml('coupon') ?>
+                <?= $block->getChildHtml('additional.cart.information') ?>
             </div>
             <div>
                 <?= $block->getChildHtml('totals') ?>
