--- a/Magento_Theme/layout/default.xml
+++ b/Magento_Theme/layout/default.xml
@@ -40,8 +40,7 @@
                 <block class="Magento\Theme\Block\Html\Header\Logo" name="logo">
                     <arguments>
                         <argument name="logoPathResolver" xsi:type="object">Magento\Theme\ViewModel\Block\Html\Header\LogoPathResolver</argument>
-                        <argument name="logo_width" xsi:type="number">189</argument>
-                        <argument name="logo_height" xsi:type="number">64</argument>
+                       <argument name="logo_size_resolver" xsi:type="object">Magento\Theme\ViewModel\Block\Html\Header\LogoSizeResolver</argument>
                     </arguments>
                 </block>
                 <block name="header-search" template="Magento_Theme::html/header/search-form.phtml"/>
