Fix incorrect escaping order

--- a/Magento_PageBuilder/templates/widgets/map.phtml
+++ b/Magento_PageBuilder/templates/widgets/map.phtml
@@ -147,7 +147,7 @@ use Magento\PageBuilder\Block\GoogleMapsApi;
                     initMaps(mapElements);
                 });
 
-                script.src = '<?= $escaper->escapeUrl($escaper->escapeJs($block->getLibraryUrl())) ?>';
+                script.src = '<?= $escaper->escapeJs($escaper->escapeUrl($block->getLibraryUrl())) ?>';
                 document.head.appendChild(script);
             }
         });
