Bind use of GraphQL to system config setting
If catalog/recently_products/synchronize_with_backend is on, GraphQL is
used to query the recently viewed products.
If catalog/recently_products/synchronize_with_backend is off, all the
product data is stored in local storage.

This mirrors how it is done in Luma.

--- a/Magento_Catalog/templates/product/widget/viewed/recently-viewed-products-js.phtml
+++ b/Magento_Catalog/templates/product/widget/viewed/recently-viewed-products-js.phtml
@@ -109,7 +109,7 @@ $title = $title ?? __('Recently Viewed Products');
 
         const defaultOptions = {
             isSlider: false,
-            useGraphQL: false,
+            useGraphQL: <?= /** @noEscape */ $viewModelProducts->isFetchRecentlyViewedEnabled() ? 'true' : 'false' ?>,
             noOfProductsToShow: <?= (int) $block->getData('page_size') ?>
         };
         const config = Object.assign({}, defaultOptions, options || {});
