--- a/Magento_Catalog/templates/product/view/quantity.phtml
+++ b/Magento_Catalog/templates/product/view/quantity.phtml
@@ -80,9 +80,11 @@ $step = $stockItemViewModel->getQtyIncrements($product)
                     <?php if ($stockItemViewModel->isQtyDecimal($product)): ?>
                     type="text"
                     pattern="[0-9](\.[0-9])?{0,<?= /** @noEscape */ $maxSalesQtyLength ?>}'"
+                    inputmode="decimal"
                     <?php else: ?>
                     type="number"
                     pattern="[0-9]{0,<?= /** @noEscape */ $maxSalesQtyLength ?>}"
+                    inputmode="numeric"
                     min="<?= /** @noEscape */ $stockItemViewModel->getMinSaleQty($product) ?: 1 ?>"
                     <?php if (null !== $maxSalesQty): ?>max="<?= /** @noEscape */ $maxSalesQty ?>"<?php endif; ?>
                     <?php if ($step): ?>step="<?= /** @noEscape */ $step ?>"<?php endif; ?>
