--- a/web/tailwind/tailwind-output.css
+++ b/web/tailwind/tailwind-output.css
@@ -1239,6 +1239,7 @@ select {
 	--tw-ring-opacity: 0.5;
 }
 .page.messages {
+	position: -webkit-sticky;
 	position: sticky;
 	z-index: 10;
     top: 0px;
@@ -2429,6 +2430,7 @@ a.pagebuilder-button-secondary:focus, button.pagebuilder-button-secondary:focus,
 	position: relative;
 }
 .sticky {
+	position: -webkit-sticky;
 	position: sticky;
 }
 .inset-0 {
@@ -3885,6 +3887,10 @@ fieldset ~ fieldset {
 .even\:bg-container-darker:nth-child(even) {
 	--tw-bg-opacity: 1;
 	background-color: rgba(245, 245, 245, var(--tw-bg-opacity));
+}
+.even\:bg-container:nth-child(even) {
+	--tw-bg-opacity: 1;
+	background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
 }
 .invalid\:ring-2:invalid {
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
